2007-09-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: epiphany-extensions, gdm2 and gcalctool branched
	for 2.20.

2007-09-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: atk, gail and tomboy branched for 2.20.

2007-09-17  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Updated Khmer translation team leader.

2007-09-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-applets branched for 2.20.

2007-09-14  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new modules fantasdic and vinagre.

2007-09-13  Claude Paroz  <claude@2xlibre.net>

	* templates/team.tmpl: Change team page label, remnants of bug #453396.

2007-09-13  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-system-tools branched for 2.20.

2007-09-12  Vincent Untz  <vuntz@gnome.org>

	* gnome-modules.xml.in: I'm maintaining gnome-menus too, now...

2007-09-12  Johannes Schmid <jhs@gnome.org>

	* translation-teams.xml.in:
	* people.xml.in:

	Added "io" translation team and coordinator

2007-09-12  Danilo Šegan  <danilo@gnome.org>

	* index.py (show_release): Add xmltemplate.
	* templates/release-xml.tmpl: Added.
	* dispatcher.py: Fix xml handling.

2007-09-11  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: evolution, evolution-data-server,
	evolution-exchange, gtkhtml branched for 2.20.

2007-09-11  Danilo Šegan  <danilo@gnome.org>

	* compare-releases.py: Support more releases.

2007-09-11  Danilo Šegan  <danilo@gnome.org>

	* compare-releases.py: Added script to compare releases.
	Support more languages.

2007-09-10  Daniel Nylander <po@danielnylander.se>

	* translation-teams.xml.in: Updated Swedish information.

2007-09-09  Claude Paroz  <claude@2xlibre.net>

	* templates/index.tmpl: Added possibility to view gettext and intltool