@@ -233,7 +233,7 @@
     <webpage>http://live.gnome.org/EyeOfGnome</webpage>
     <maintainer id="lucasr"/>
     <scmmodule>eog</scmmodule>
-    <branch id="HEAD" stringfrozen="true">
+    <branch id="HEAD" stringfrozen="false">
       <domain id="po">
         <_description>UI translations</_description>
       </domain>
@@ -245,6 +245,7 @@
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
   </module>  
   <module id="epiphany">
     <_description>Epiphany Web Browser</_description>
@@ -607,10 +608,11 @@
     <branch id="HEAD"/>
   </module>
   <module id="gnome-control-center">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <module id="gnome-cups-manager">
     <branch id="HEAD"/>
@@ -1513,10 +1515,11 @@
     <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="zenity">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD" stringfrozen="false"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
+    <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
   <!-- Non-GNOME modules -->
   <module id="gstreamer">
