@@ -473,7 +473,7 @@
       <module id="deskbar-applet"/>
       <module id="eel"/>
       <module id="ekiga" branch="gnome-2-20"/>
-      <module id="eog"/>
+      <module id="eog" branch="gnome-2-20"/>
       <module id="epiphany" branch="gnome-2-20"/>
       <module id="evince"/>
       <module id="evolution" branch="gnome-2-20"/>
@@ -488,7 +488,7 @@
       <module id="gedit"/>
       <module id="gnome-applets" branch="gnome-2-20"/>
       <module id="gnome-backgrounds"/>
-      <module id="gnome-control-center"/>
+      <module id="gnome-control-center" branch="gnome-2-20"/>
       <module id="gnome-desktop"/>
       <module id="gnome-doc-utils"/>
       <module id="gnome-games"/>
@@ -533,7 +533,7 @@
       <module id="vino"/>
       <module id="vte"/>
       <module id="yelp"/>
-      <module id="zenity"/>
+      <module id="zenity" branch="gnome-2-20"/>
     </category>
     <category id="admin">
       <_description>Administration Tools</_description>
