@@ -1,3 +1,10 @@
+2007-09-18  Johannes Schmid <jhs@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+
+	Branched eog, gnome-control-center and zenity for 2.20
+
 2007-09-17  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
